# kanshi-sni

./: .gitignore  flake.nix  kanshi-sni.cabal
app/: Main.hs
docs/plans/: 2026-02-09-kanshi-sni-design.md  2026-02-09-kanshi-sni-implementation.md
src/: Menu.hs
src/DBus/: Proxy.hs
src/Hyprland/: Monitors.hs
src/Kanshi/: Config.hs  SNI.hs  Varlink.hs
